Paciente, Especialidade e Especialistas: Ajustes de atributos e relacionamentos nas responses
